--- a/app/templates/new.html
+++ b/app/templates/new.html
@@ -1,47 +1,51 @@
 {% extends "layout.html" %}
 {% block content %}
-<form action="/cities/new" method="POST">
-    <div class="row">
-        <div class="col">
-            <label for="fldName">City Name</label>
-            <input id="fldName" type="text" class="form-control" placeholder="City Name" name="fldName">
-        </div>
-        <div class="col">
-            <label for="fldAbbreviation">City Abbreviation</label>
-            <input id="fldAbbreviation" t ype="text" class="form-control" placeholder="City Abbreviation"
-                   name="fldAbbreviation">
-        </div>
-        <div class="col">
-            <label for="fldCountry">City Country</label>
-            <input id="fldCountry" type="text" class="form-control" placeholder="City Country" name="fldCountry">
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col">
-            <label for="fldLat">City Latitude</label>
-            <input id="fldLat" type="text" class="form-control" placeholder="City Latitude" name="fldLat">
-        </div>
-        <div class="col">
-            <label for="fldlong">City Longitude</label>
-            <input id="fldlong" type="text" class="form-control" placeholder="City Longitude" name="fldLong">
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <label for="fldCapitalStatus">Capital Status</label>
-
-            <input id="fldCapitalStatus" type="text" class="form-control" placeholder="Capital Status "
-                   name="fldCapitalStatus">
-        </div>
-        <div class="col">
-            <label for="fldPopulation">City Population</label>
-            <input id="fldPopulation" type="text" class="form-control" placeholder="Population" name="fldPopulation">
-        </div>
-    </div>
-    <button type="submit" class="btn btn-success">Create</button>
-
-</form>
-
-{% endblock %}
-
+    <form action="/grades/new" method="POST">
+        <div class="column">
+            <div class="col">
+                <label for="Lname">Last Name</label>
+                <input id="Lname" type="text" class="form-control" placeholder="Last Name" name="Lname" >
+            </div>
+            <div class="col">
+                <label for="Fname">First Name</label>
+                <input id="Fname" type="text" class="form-control" placeholder="First Name"
+                name="Fname" >
+            </div>
+            <div class="col">
+                <label for="ssn">SSN</label>
+                <input id="ssn" type="text" class="form-control" placeholder="SSN"
+                name="ssn" >
+            </div>
+            <div class="col">
+                <label for="Test1">Test 1</label>
+                <input id="Test1" type="text" class="form-control" placeholder="Test 1"
+                name="Test1" >
+            </div>
+            <div class="col">
+                <label for="Test2">Test 2</label>
+                <input id="Test2" type="text" class="form-control" placeholder="Test 2"
+                name="Test2" >
+            </div>
+            <div class="col">
+                <label for="Test3">Test 3</label>
+                <input id="Test3" type="text" class="form-control" placeholder="Test 3"
+                name="Test3" >
+            </div>
+            <div class="col">
+                <label for="Test4">Test 4</label>
+                <input id="Test4" type="text" class="form-control" placeholder="Test 4"
+                name="Test4" >
+            </div>
+            <div class="col">
+                <label for="Final">Final</label>
+                <input id="Final" type="text" class="form-control" placeholder="Final"
+                name="Final" >
+            </div>
+            <div class="col">
+                <label for="Grade">Grade</label>
+                <input id="Grade" type="text" class="form-control" placeholder="Grade"
+                name="Grade" >
+            </div>
+            <button type="submit" class="btn btn-success">Create</button>
+        </form>
+    {% endblock %}
