Feature: Styles added

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<table class="table">
+<table class="table" style="margin-top: 5%; background: white; text-align: center;">
     <thead>
     <tr>
         <th scope="col">Last Name</th>
