--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -46,7 +46,7 @@
             <input id="Grade" type="text" class="form-control" placeholder="Grade"
                    name="Grade" value="{{grades.Grade}}">
         </div>
-    <button type="submit" class="btn btn-success" style="margin-top: 10%;margin-left: 50%;padding: 20px;font-size: 20px;">Save</button>
+    <button type="submit" class="btn btn-success" style="margin-top: 10%;margin-left: 50%;padding: 20px;font-size: 20px; background-color: #C38D9E; ">Save</button>
 
 </form>
 {% endblock %}
