--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
-<table class="table" style="margin-top: 5%; background: white; text-align: center;">
+<table class="table" style="border-radius: 30px; margin-top: 5%; background: white; text-align: center;">
     <thead>
-    <tr>
+    <tr style="background: black; color: white; border-radius: 30px;">
         <th scope="col">Last Name</th>
         <th scope="col">First Name</th>
         <th scope="col">SSN</th>
